# Hi

./: Dockerfile  LICENSE  README.md  SUBMISSION_README.md  adapter.py  config.example.yaml  docker-compose.yml  pyproject.toml  test_engine.py  writeup.md
adapters/: __init__.py  myteam.py
anvil_pcam/: __init__.py  __main__.py  cli.py
anvil_pcam/core/: __init__.py  dynamics.py  evaluation.py  memory.py  noise.py  precision.py
anvil_pcam/web/: __init__.py  app.py  routes.py
anvil_pcam/web/templates/: index.html
bench-v2/bench-p04-pcam/: test_cd_verbatim.py  test_heuristics.py  test_opt.py  test_restarts.py  test_retrieval.py  test_scipy.py  test_scipy_all.py  test_v2_hessian.py
bench-v2/bench-p04-pcam/adapters/: myteam.py
tests/: test_pcam.py
