[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anvil-pcam-lab"
version = "1.0.0"
description = "ANVIL P-04 precision-controlled associative memory lab with Hopfield-style attractor dynamics."
license = "MIT"
requires-python = ">=3.11"
readme = "README.md"
authors = [
    { name = "Anvil PCAM Lab" },
]
keywords = ["associative-memory", "hopfield-networks", "energy-based-models", "precision-control", "attractor-dynamics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=1.24.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.1.0",
]

[project.scripts]
anvil-pcam = "anvil_pcam.cli:main"
pcam-lab = "anvil_pcam.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
docs = ["mkdocs>=1.6.0", "mkdocs-material>=9.5.0"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:importlib._bootstrap",
    "ignore::DeprecationWarning:sys",
]

[tool.hatch.build.targets.wheel]
packages = ["anvil_pcam"]
